Bug 415475 - [X11] Blur desktop effect region position is off for KDE menus
Summary: [X11] Blur desktop effect region position is off for KDE menus
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: git master
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-12-23 09:56 UTC by Oded Arbel
Modified: 2020-01-19 13:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Window operation menu at the top of the screen (vertical screen orientation) (171.35 KB, image/png)
2019-12-23 09:56 UTC, Oded Arbel
Details
Window operation menu in the middle of the screen (vertical screen orientation) (571.60 KB, image/png)
2019-12-23 09:57 UTC, Oded Arbel
Details
Screencast showing the problematic behavior with Kate (3.10 MB, video/x-matroska)
2019-12-23 09:59 UTC, Oded Arbel
Details
Blur offset (495.65 KB, image/png)
2019-12-23 13:43 UTC, Ismael Asensio
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oded Arbel 2019-12-23 09:56:18 UTC
Created attachment 124661 [details]
Window operation menu at the top of the screen (vertical screen orientation)

SUMMARY
With the kwin blur desktop effect enabled on X11, the region blurred is positioned incorrectly for menus of KDE applications.

Usually the blurred region is positioned down and to the right of the expected position with the offset larger the farther down and to the right the menu should be displayed

STEPS TO REPRODUCE
1. Enable blur desktop effect.
2. Enable menu transparency using the translucency desktop effect.
3. Open a kde menu, such as the kwin window operation menu, or the standard menu of a KDE application.

OBSERVED RESULT
The region under the menu is not fully blurred or not blurred at all, while a region outside the menu is blurred.

EXPECTED RESULT
The region under the menu should be completely blurred and no other area on the screen should be blurred.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
KDE Plasma Version: 5.17.80
KDE Frameworks Version: 5.66.0
Qt Version: 5.12.4

ADDITIONAL INFORMATION
See attached screenshots
Comment 1 Oded Arbel 2019-12-23 09:57:02 UTC
Created attachment 124662 [details]
Window operation menu in the middle of the screen (vertical screen orientation)

Same window as the previous attachment, just not maximized this time
Comment 2 Oded Arbel 2019-12-23 09:59:06 UTC
Created attachment 124663 [details]
Screencast showing the problematic behavior with Kate

This is using a single monitor in standard orientation (just to make sure its not an issue with weird screen geometry).

The flickering seen in the video is probably an artifact of the screencast software (volkoscreen), as I have not observed it on the real display.
Comment 3 Ismael Asensio 2019-12-23 13:43:52 UTC
Created attachment 124671 [details]
Blur offset

I can confirm this behavior on my machine, also on git master, with an horizontal screen orientation.
The position of the blurred region (starting from top-left corner) is exactly the double as it should be.

Operating System: Kubuntu 19.10
KDE Plasma Version: 5.17.80
KDE Frameworks Version: 5.66.0
Qt Version: 5.12.4
Kernel Version: 5.3.0-23-generic
OS Type: 64-bit
Processors: 8 × Intel® Core™ i7-8565U CPU @ 1.80GHz
Memory: 15,3 GiB
Comment 4 Vlad Zahorodnii 2020-01-10 10:06:10 UTC
Git commit 6e910c455d94a76d272bb155463ecd69f0ca2469 by Vlad Zahorodnii.
Committed on 10/01/2020 at 10:05.
Pushed by vladz into branch 'master'.

Return correct shape for Unmanaged clients

Summary:
Currently EffectWindowImpl::shape() falls back to the frame geometry
because isX11Client() returns invalid value for Unmanaged clients.

Reviewers: #kwin, romangg

Reviewed By: #kwin, romangg

Subscribers: kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D26542

M  +3    -2    effects.cpp

https://commits.kde.org/kwin/6e910c455d94a76d272bb155463ecd69f0ca2469
Comment 5 Oded Arbel 2020-01-19 13:25:33 UTC
Vlad Zahorodnii - thanks for the fix. One question, if you may: what would be the reason that after that fix, while KWin and most KDE applications get nice and comfortable blurred menus, for some applications there is no menu blur - or weirdly enough, "almost" no menu blur.

Examples:
 - Gwenview: the context menu is blurred, but none of the dropdown menus..
 - Kdevelop: the context menu is blurred, but not the dropdown menus - except "bookmarks" - that is blurred fine. The bookmarks menu is also initially the smallest with only two entries, but if I add tons of bookmarks, making the menu much larger, it is still blurred fine.
 - GTK+ applications: none that I tried have menus blurred - they are all transparent as setup in the Desktop Effects kcm, but no blur. I tried Firefox, Builder, Chrome, Gnome System Monitor, Calculator, gedit and Eclipse. I'm talking context menus and dropdown menus (where exist). The headerbar popups are never transparent and according to xwininfo are not actually windows - they are part of the app windows.